# teaim-review

./: .gitignore  .gitignore.backup  .local\state\replit\agent\filesystem\filesystem_state.json  .replit  .vscode\extensions.json  .vscode\settings.json  THEME.md  attached_assets\Pasted--Build-Push-What-this-includes-now-Digest-Scheduler-quiet-hours-daily-caps-no-duplicates-S-1758332406044_1758332406045.txt  attached_assets\Pasted--Drop-in-Seeder-File-server-admin-test-seedMinimal-ts-server-admin-test-seedMinimal-ts-Drop-1758924268262_1758924268263.txt  attached_assets\Pasted--Focused-sprint-plan-2-short-sprints-Sprint-1-Customer-visible-wins-External-Signer-Tokens-on-1758323768211_1758323768213.txt  attached_assets\Pasted--Replit-Kickstart-Prompt-TEAIM-Workday-Hub-Build-me-a-multi-tenant-SaaS-web-app-called-TEAIM--1758152348108_1758152348113.txt  attached_assets\Pasted-0-Assumptions-You-already-added-theme-css-updated-tailwind-config-js-and-call-initTheme-in-App-1758923214858_1758923214858.txt  attached_assets\Pasted-1-Add-a-one-shot-ingest-sync-endpoint-no-background-jobs-This-ingests-parses-chunks-embeds--1758170121769_1758170121769.txt  attached_assets\Pasted-1-Backend-Re-ingest-a-stored-file-from-artifacts-restores-We-ll-add-an-endpoint-that-Val-1758339008842_1758339008845.txt  attached_assets\Pasted-1-ChatDock-persist-collapsed-state-default-minimized-client-src-components-ChatDock-tsx-edit-1758329611294_1758329611296.txt  attached_assets\Pasted-1-Email-Dropbox-ingest-transcripts-docs-Flow-secure-simple-Address-ingest-yourdomain-com--1758216327302_1758216327303.txt  (+379 more)
(+642 files in other folders)
